# arduino-regulator

./: CMakeLists.txt  main.cpp
regulator/: Regulator.h
regulator/mean/: MeanRegulator.cpp  MeanRegulator.h
regulator/mean/int/: IntMeanRegulator.cpp  IntMeanRegulator.h
regulator/mean/uint8/: UInt8MeanRegulator.cpp  UInt8MeanRegulator.h
